# data_read_benchmark

./: README.md  config.yaml  main.py  pyproject.toml
src/: datasets.py  generate_data.py  lightning_module.py  sampler.py
tests/: test_data_generation.py
